examples/errors/match_non_exhaustive.vut
let value = "a"
let result = match value {
  "b" => 1
}
out(result)
